--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         run: hugo mod get
 
       - name: Build Hugo site
-        run: hugo --minify -—buildDrafts
+        run: hugo --minify
 
       - name: List public directory
         run: |
