--- a/hugo.toml
+++ b/hugo.toml
@@ -3,8 +3,8 @@ languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = "PaperMod"
 
-# [pagination]
-#   pagerSize = 6  # 首页文章每页展示数量
+[pagination]
+  pagerSize = 6  # 首页文章每页展示数量
 
 [params]
   ShowReadingTime = true
@@ -12,3 +12,19 @@ theme = "PaperMod"
   ShowPostNavLinks = true
   ShowBreadCrumbs = true
   ShowCodeCopyButtons = true
+  comments = true
+  ShowToc = true  
+  TocOpen = true              # 默认展开目录
+  ShowWordCount = true
+
+[params.waline]
+  enable = true
+  serverURL = "https://waline-demo-sigma.vercel.app"  # 替换成你的 Waline 部署地址
+
+
+[[menu.main]]
+  identifier = "contact"
+  name = "联系我"
+  url = "/contact/"
+  weight = 50
+  pre = "<i class='fas fa-envelope'></i>"
